spark ecos integration