@@ -4,7 +4,7 @@
 	
     <groupId>com.github</groupId>
     <artifactId>ecos</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     
     <name>ecos</name>
@@ -21,15 +21,17 @@
     
     <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <java.version>1.6</java.version>
+      <java.version>1.7</java.version>
       <jblas.version>1.2.3</jblas.version>
       <scala.binary.version>2.10</scala.binary.version>
       <compiler.plugin.version>2.3.2</compiler.plugin.version>
       <dependency.plugin.version>2.6</dependency.plugin.version>
       <surefire.plugin.version>2.12</surefire.plugin.version>
       <javadoc.plugin.version>2.8</javadoc.plugin.version>
+      <spark.version>1.6.0</spark.version>
+      <hadoop.version>2.5.0</hadoop.version>
     </properties>
-
+    
     <scm>
       <connection>scm:git:https://github.com/embotech/ecos-java-scala</connection>
       <developerConnection>scm:git:https://github.com/embotech/ecos-java-scala</developerConnection>
@@ -53,141 +55,170 @@
       <dependency>
 	<groupId>org.scalatest</groupId>
 	<artifactId>scalatest_${scala.binary.version}</artifactId>
-	<version>2.0</version>
+	<version>2.2.4</version>
 	<scope>test</scope>
       </dependency>
-      
       <dependency>
 	<groupId>org.scala-lang</groupId>
 	<artifactId>scala-library</artifactId>
 	<version>2.10.3</version>
       </dependency>
-      
       <dependency>
 	<groupId>junit</groupId>
 	<artifactId>junit</artifactId>
 	<version>4.10</version>
 	<scope>test</scope>
       </dependency>
-      
       <dependency>
 	<groupId>org.jblas</groupId>
 	<artifactId>jblas</artifactId>
 	<version>${jblas.version}</version>
       </dependency>
-      
       <dependency>
 	<groupId>com.github.fommil</groupId>
 	<artifactId>jniloader</artifactId>
 	<version>1.1</version>
       </dependency>
+      
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-core_${scala.binary.version}</artifactId>
+        <version>${spark.version}</version>
+      </dependency>
+      
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-core_${scala.binary.version}</artifactId>
+        <type>test-jar</type>
+        <scope>test</scope>
+        <version>${spark.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-mllib_${scala.binary.version}</artifactId>
+        <version>${spark.version}</version>
+      </dependency>
+      
+      <dependency>
+        <groupId>org.apache.spark</groupId>
+        <artifactId>spark-mllib_${scala.binary.version}</artifactId>
+        <type>test-jar</type>
+        <scope>test</scope>
+        <version>${spark.version}</version>
+      </dependency>
     </dependencies>
     
     <build>
       <plugins>
-	<plugin>
-	  <artifactId>maven-compiler-plugin</artifactId>
-	  <version>${compiler.plugin.version}</version>
-	  <configuration>
-	    <sourceDir>src/main/java</sourceDir>
-	    <sourceDir>src/test/java</sourceDir>
-	    <source>${java.source.version}</source>
-	    <target>${java.target.version}</target>
-	  </configuration>
-	</plugin>
-        
-	<plugin>
-	  <groupId>org.codehaus.mojo</groupId>
-	  <artifactId>build-helper-maven-plugin</artifactId>
-	  <version>1.7</version>
-	  <executions>
-	    <execution>
-	      <id>add-source</id>
-	      <phase>generate-sources</phase>
-	      <goals>
-		<goal>add-source</goal>
-	      </goals>
-	      <configuration>
-		<sources>
-		  <source>src/main/java</source>
-		  <source>src/main/scala</source>
-		  <source>src/main/resources</source>
-		</sources>
-	      </configuration>
-	    </execution>
-	    <execution>
-	      <id>add-test-source</id>
-	      <phase>generate-test-sources</phase>
-	      <goals>
-		<goal>add-test-source</goal>
-	      </goals>
-	      <configuration>
-		<sources>
-		  <source>src/test/java</source>
-		  <source>src/test/scala</source>
-		</sources>
-	      </configuration>
-	    </execution>
-	  </executions>
-	</plugin>
-        
-	<plugin>
-	  <groupId>org.scala-tools</groupId>
-	  <artifactId>maven-scala-plugin</artifactId>
-	  <version>2.14.2</version>
-	  <executions>
-	    <execution>
-	      <goals>
-		<goal>compile</goal>
-		<goal>testCompile</goal>
-	      </goals>
-	    </execution>
-	  </executions>
-	  <configuration>
-	    <sourceDir>src/main/scala</sourceDir>
-	    <sourceDir>src/test/scala</sourceDir>
-	    <jvmArgs>
-	      <jvmArg>-Xms64m</jvmArg>
-	      <jvmArg>-Xmx1024m</jvmArg>
-	    </jvmArgs>
-	  </configuration>
-	</plugin>
-        
-	<plugin>
-	  <groupId>org.scalatest</groupId>
-	  <artifactId>scalatest-maven-plugin</artifactId>
-	  <version>1.0-M2</version>
-	  <configuration>
-	    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
-	    <stdout>W</stdout> <!-- Skip coloring output -->
-	  </configuration>
-	  <executions>
-	    <execution>
-	      <id>scala-test</id>
-	      <goals>
-		<goal>test</goal>
-	      </goals>
-	    </execution>
-	  </executions>
-	</plugin>
-        
-	<plugin>
-	  <groupId>org.apache.maven.plugins</groupId>
-	  <artifactId>maven-assembly-plugin</artifactId>
-	  <configuration>
-	    <descriptors>
-	      <descriptor>src/main/assembly/job.xml</descriptor>
-	    </descriptors>
-	  </configuration>
-	</plugin>  
-      </plugins>
-    </build>
-    
-    <distributionManagement>
-      <snapshotRepository>
-	<id>istgbd011.hadoop.istg.verizon.com</id>
-	<name>istgbd011.hadoop.istg.verizon.com-snapshots</name>
-	<url>http://132.197.10.21:8081/artifactory/libs-snapshot-local</url>
-      </snapshotRepository>
-    </distributionManagement>
+      <!-- compiles scala -->
+        <plugin>
+            <groupId>net.alchim31.maven</groupId>
+            <artifactId>scala-maven-plugin</artifactId>
+            <version>3.2.2</version>
+            <configuration>
+                <scalaVersion>${scala.version}</scalaVersion>
+                <javacArgs>
+                    <javacArg>-source</javacArg>
+                    <javacArg>${java.version}</javacArg>
+                    <javacArg>-target</javacArg>
+                    <javacArg>${java.version}</javacArg>
+                </javacArgs>
+            </configuration>
+            <executions>
+                <execution>
+                    <phase>compile</phase>
+                    <goals>
+                        <goal>compile</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>scala-compile-first</id>
+                    <phase>process-resources</phase>
+                    <goals>
+                        <goal>compile</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>scala-test-compile-first</id>
+                    <phase>process-test-resources</phase>
+                    <goals>
+                        <goal>testCompile</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <!-- compiles java -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.3</version>
+            <configuration>
+                <source>${java.version}</source>
+                <target>${java.version}</target>
+                <compilerArgs>
+                    <arg>-Xlint:all,-serial</arg>
+                </compilerArgs>
+            </configuration>
+            <executions>
+                <execution>
+                    <phase>compile</phase>
+                    <goals>
+                        <goal>compile</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+
+        <!--enable surefire for java tests -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.19.1</version>
+            <configuration>
+                <testSourceDirectory>/src/test/java/</testSourceDirectory>
+            </configuration>
+        </plugin>
+
+        <!-- enable scalatest for scala tests -->
+        <plugin>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest-maven-plugin</artifactId>
+            <version>1.0</version>
+            <configuration>
+                <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+                <junitxml>.</junitxml>
+                <filereports>WDF TestSuite.txt</filereports>
+                <argLine>-XX:MaxPermSize=256m -Xmx2g</argLine>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>test</id>
+                    <goals>
+                        <goal>test</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jar-plugin</artifactId>
+            <version>2.6</version>
+            <configuration>
+                <skipIfEmpty>true</skipIfEmpty>
+            </configuration>
+        </plugin>
+
+       <plugin>
+         <groupId>org.apache.maven.plugins</groupId>
+         <artifactId>maven-assembly-plugin</artifactId>
+         <configuration>
+           <descriptors>
+             <descriptor>src/main/assembly/job.xml</descriptor>
+           </descriptors>
+         </configuration>
+       </plugin>
+    </plugins>
+  </build>
 </project>
